# schedule-1-mix-calculator

./: Cargo.toml  README.md  shell.nix
.github/workflows/: build-debug-binaries-linux.yml  build-release-binaries-linux.yml  build-release-binaries-windows.yml
src/: additives.rs  effect.rs  expenses.rs  ingredients.rs  main.rs  recipe.rs  tests.rs
src/recipe/: search_algorithms.rs
