[package]
name = "schedule-1-mix-calculator"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[profile.release]
lto = "thin"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
ahash = "0.8.11"
enumset = "1.1.5"
iced = "0.13.1"
nalgebra = "0.33.2"
rayon = "1.10.0"
